all columns update in department

--- a/pages/departments/design.html
+++ b/pages/departments/design.html
@@ -20,7 +20,7 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
-    <title>RSDC | HR Department</title>
+    <title>RSDC | Design Department</title>
     <style>
       /* Custom CSS */
       .employee-container {
@@ -137,147 +137,175 @@
       <h1 class="text-center">Design Department</h1>
 
       <p>
-        The design department is mainly responsible for designing various and attractive websites.They are mainly responsible for creating informative social meadia posts,attractive and innovative posters, thumbnail designs.The department also  works on posting vaious tech-related news.Majorly they are very important part of the Revolution club helping out the club with there creative designs and art.
+        The design department is mainly responsible for designing various and
+        attractive websites.They are mainly responsible for creating informative
+        social meadia posts,attractive and innovative posters, thumbnail
+        designs.The department also works on posting vaious tech-related
+        news.Majorly they are very important part of the Revolution club helping
+        out the club with there creative designs and art.
       </p>
     </div>
 
     <!-- Employee Info -->
 
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
+    <!-- Employee Info -->
+    <div class="container-fluid mt-4">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Shreya Hiremath</h5>
+                <p>First year BTech-CE</p>
+                <p>31232054@vupune.ac.in</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-10 employee-details">
-          <h5>Shreya Hiremath</h5>
-          <p>First year BTech-CE</p>
-          <p>31232054@vupune.ac.in</p>
+
+        <!-- Add more col divs for additional cards -->
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Parth Hande</h5>
+                <p>First year BTech-CE</p>
+                <p>31231787@vupune.ac.in</p>
+              </div>
+            </div>
+          </div>
         </div>
+
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Ronit Jain</h5>
+                <p>Second year BTech-CE</p>
+                <p>Email</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Manasvi Karwa</h5>
+                <p>First year BTech-CE</p>
+                <p>31230847@vupune.ac.in</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Add more col divs for additional cards -->
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Tanishqa Ketkar</h5>
+                <p>Second year BTech-CE</p>
+                <p>email</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Sukanya Pujari</h5>
+                <p>Second year BTech-CE</p>
+                <p>202200308@vupune.ac.in</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Annanya Gaikwad</h5>
+                <p>Second year BTech-CE</p>
+                <p>3202202062@vupune.ac.in</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Ishita Srivastava</h5>
+                <p>Second year BTech-CE</p>
+                <p>202201880@vupune.ac.in</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Repeat this col div for each additional card -->
       </div>
     </div>
 
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Parth Hande</h5>
-          <p>First year Btech-CSE</p>
-          <p>31231787@vupune.ac.in</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Ronit Jain</h5>
-          <p>Second year Btech-CE</p>
-          <p>Email</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Manasvi Karwa</h5>
-          <p>First year Btech-CSE</p>
-          <p>31230847@vupune.ac.in</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Tanishqa Ketkar</h5>
-          <p>Second year Btech-(AIDS)</p>
-          <p>email</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Sukanya Pujari</h5>
-          <p>Second year Btech-CE</p>
-          <p>202200308@vupune.ac.in</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Annanya Gaikwad</h5>
-          <p>Second year Btech-CE</p>
-          <p>3202202062@vupune.ac.in</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Ishita Srivastava</h5>
-          <p>Second year Btech-CE</p>
-          <p>202201880@vupune.ac.in</p>
-        </div>
-      </div>
-    </div>
     <!-- Footer -->
     <footer class="bg-light mt-4">
       <!-- Grid container -->
