--- a/pages/departments/social.html
+++ b/pages/departments/social.html
@@ -15,7 +15,6 @@
       crossorigin="anonymous"
     ></script>
     <script
-      defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
@@ -73,62 +72,59 @@
           class="collapse navbar-collapse justify-content-end"
           id="navbarSupportedContent"
         >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="../about.html">About us</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Departments
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="/pages/departments/HR.html"
-                    >HR Department</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/pages/departments/Tech.html"
-                    >Technical Department</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/pages/departments/social.html"
-                    >Social Department</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/pages/departments/design.html"
-                    >Design Department</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/pages/departments/project.html"
-                    >Project Department</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../leads.html">Leads</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../blog/blogMain.html">Blog</a>
-            </li>
-            <button class="btn btn-outline-primary" type="submit">
-              Join Now
-            </button>
-          </ul>
-        </div>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../about.html">About us</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Departments
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li>
+                <a class="dropdown-item" href="/pages/departments/HR.html"
+                  >HR Department</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="/pages/departments/Tech.html"
+                  >Technical Department</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="/pages/departments/social.html"
+                  >Social Department</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="/pages/departments/design.html"
+                  >Design Department</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="/pages/departments/project.html"
+                  >Project Department</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../leads.html">Leads</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../blog/blogMain.html">Blog</a>
+          </li>
+          <button class="btn btn-outline-primary" type="submit">
+            Join Now
+          </button>
+        </ul>
       </div>
     </nav>
 
@@ -139,96 +135,114 @@
         The social department, often referred to as the social services
         department, plays a crucial role in promoting the well-being and social
         development of individuals and communities. This department is
-        responsible for addressing various social. Members within
-        this department provide news and keeps the club updated with various tech aspect. Additionally, the social department collaborates with other clubs to create and implement
-        programs that address societal challenges and foster a more
-        inclusive and compassionate society.
+        responsible for addressing various social. Members within this
+        department provide news and keeps the club updated with various tech
+        aspect. Additionally, the social department collaborates with other
+        clubs to create and implement programs that address societal challenges
+        and foster a more inclusive and compassionate society.
       </p>
     </div>
 
     <!-- Employee Info -->
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
+    <div class="container-fluid mt-4">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Yash Patil</h5>
+                <p>First year BTech-CE</p>
+                <p>31231712@vupune.ac.in</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-10 employee-details">
-          <h5>Yash Patil</h5>
-          <p>First year BTech-CE</p>
-          <p>31231712@vupune.ac.in</p>
-        </div>
-      </div>
-    </div>
 
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
+        <!-- Add more col divs for additional cards -->
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Shreya Hiremath</h5>
+                <p>First year BTech-CE</p>
+                <p>31232054@vupune.ac.in</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-10 employee-details">
-          <h5>Sakshi Shinde</h5>
-          <p>First year BTech-CE</p>
-          <p>31230911@vupune.ac.in</p>
-        </div>
-      </div>
-    </div>
 
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Sakshi Shinde</h5>
+                <p>First year BTech-CE</p>
+                <p>31230911@vupune.ac.in</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-10 employee-details">
-          <h5>Shreya Hiremath</h5>
-          <p>First year BTech-CE</p>
-          <p>31232054@vupune.ac.in</p>
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Janhavi Dhariya</h5>
+                <p>Third year BTech-CE</p>
+                <p>Email</p>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
 
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
+        <!-- Add more col divs for additional cards -->
+        <div class="col">
+          <div class="container employee-container">
+            <div class="row align-items-center">
+              <div class="col-md-4 text-center">
+                <img
+                  src="../../Images/user.jpeg"
+                  alt="..."
+                  class="rounded-circle"
+                />
+              </div>
+              <div class="col-md-8 employee-details">
+                <h5>Ismail Patel</h5>
+                <p>Third year BTech-CE</p>
+                <p>202201422@vupune.ac.in</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-10 employee-details">
-          <h5>Janhavi Dhariya</h5>
-          <p>Third year BTech-CE</p>
-          <p>email</p>
-        </div>
-      </div>
-    </div>
 
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Ismail Patel</h5>
-          <p>Third year BTech-CE</p>
-          <p>202201422@vupune.ac.in</p>
-        </div>
+        <!-- Repeat this col div for each additional card -->
       </div>
     </div>
 
