--- a/pages/departments/HR.html
+++ b/pages/departments/HR.html
@@ -1,284 +1,302 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-      crossorigin="anonymous"
-    ></script>
-    <title>RSDC | HR Department</title>
-    <style>
-      /* Custom CSS */
-      .employee-container {
-        margin-top: 20px;
-      }
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+			crossorigin="anonymous"
+		></script>
+		<script
+			defer
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+			integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+			crossorigin="anonymous"
+		></script>
+		<title>RSDC | HR Department</title>
+		<style>
+			/* Custom CSS */
+			.employee-container {
+				margin-top: 20px;
+			}
 
-      .employee-container img {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-      }
+			.employee-container img {
+				width: 150px;
+				height: 150px;
+				border-radius: 50%;
+			}
 
-      @media (max-width: 767.98px) {
-        /* Adjustments for mobile view */
-        .employee-details {
-          margin-top: 10px;
-        }
+			@media (max-width: 767.98px) {
+				/* Adjustments for mobile view */
+				.employee-details {
+					margin-top: 10px;
+				}
 
-        .employee-details h5,
-        .employee-details p {
-          text-align: center;
-        }
-      }
-    </style>
-  </head>
+				.employee-details h5,
+				.employee-details p {
+					text-align: center;
+				}
+			}
+		</style>
+	</head>
 
-  <body>
-    <!--====== NAVBAR ======-->
-    <nav class="navbar navbar-expand-sm navbar-light">
-      <div class="container">
-        <a
-          href="../../index.html"
-          class="d-flex align-items-center gap-2 text-decoration-none"
-        >
-          <img id="logo" src="../../Images/rsdc_logo.svg" alt="" />
-          <h4 style="color: black"><b> RSDC </b></h4>
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarSupportedContent"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="../about.html">About us</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Departments
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="/pages/departments/HR.html"
-                    >HR Department</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/pages/departments/Tech.html"
-                    >Technical Department</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/pages/departments/social.html"
-                    >Social Department</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/pages/departments/design.html"
-                    >Design Department</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/pages/departments/project.html"
-                    >Project Department</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../leads.html">Leads</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../blog/blogMain.html">Blog</a>
-            </li>
-            <button class="btn btn-outline-primary" type="submit">
-              Join Now
-            </button>
-          </ul>
-        </div>
-      </div>
-    </nav>
+	<body>
+		<!--====== NAVBAR ======-->
+		<nav class="navbar navbar-expand-sm navbar-light">
+			<div class="container">
+				<a
+					href="../../index.html"
+					class="d-flex align-items-center gap-2 text-decoration-none"
+				>
+					<img id="logo" src="../../Images/rsdc_logo.svg" alt="" />
+					<h4 style="color: black"><b> RSDC </b></h4>
+				</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="collapse navbar-collapse justify-content-end"
+					id="navbarSupportedContent"
+				>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="../about.html">About us</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								id="navbarDropdown"
+								role="button"
+								data-bs-toggle="dropdown"
+								aria-expanded="false"
+							>
+								Departments
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li>
+									<a class="dropdown-item" href="/pages/departments/HR.html"
+										>HR Department</a
+									>
+								</li>
+								<li>
+									<a class="dropdown-item" href="/pages/departments/Tech.html"
+										>Technical Department</a
+									>
+								</li>
+								<li>
+									<a class="dropdown-item" href="/pages/departments/social.html"
+										>Social Department</a
+									>
+								</li>
+								<li>
+									<a class="dropdown-item" href="/pages/departments/design.html"
+										>Design Department</a
+									>
+								</li>
+								<li>
+									<a
+										class="dropdown-item"
+										href="/pages/departments/project.html"
+										>Project Department</a
+									>
+								</li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../leads.html">Leads</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../blog/blogMain.html">Blog</a>
+						</li>
+						<button class="btn btn-outline-primary" type="submit">
+							Join Now
+						</button>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
-    <!-- HR Department Info -->
-    <div class="container mt-4">
-      <h1 class="text-center">HR Department</h1>
+		<!-- HR Department Info -->
+		<div class="container mt-4">
+			<h1 class="text-center">HR Department</h1>
 
-      <p>
-        The Human Resources (HR) department is a crucial component of revolution
-        club responsible for managing and overseeing various aspects related to
-        its workforce. This includes tasks such as recruitment, collecting
-        information, benefits club by overseeing the work of members involved,
-        training and development, performance management, they also ensure
-        compliance with various norms given by the club . HR plays a vital role
-        in supporting the club by overall goals by fostering a positive work
-        environment and facilitating effective communication between team
-        leaders and team members.
-      </p>
-    </div>
+			<p>
+				The Human Resources (HR) department is a crucial component of revolution
+				club responsible for managing and overseeing various aspects related to
+				its workforce. This includes tasks such as recruitment, collecting
+				information, benefits club by overseeing the work of members involved,
+				training and development, performance management, they also ensure
+				compliance with various norms given by the club . HR plays a vital role
+				in supporting the club by overall goals by fostering a positive work
+				environment and facilitating effective communication between team
+				leaders and team members.
+			</p>
+		</div>
 
-    <!-- Employee Info -->
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Yog Darda</h5>
-          <p>Second year BTech-CE</p>
-          <p>Email</p>
-        </div>
-      </div>
-    </div>
+		<!-- Employee Info -->
+		<div class="container-fluid mt-4">
+			<div class="row row-cols-1 row-cols-md-3 g-4">
+				<div class="col">
+					<div class="container employee-container">
+						<div class="row align-items-center">
+							<div class="col-md-4 text-center">
+								<img
+									src="../../Images/user.jpeg"
+									alt="..."
+									class="rounded-circle"
+								/>
+							</div>
+							<div class="col-md-8 employee-details">
+								<h5>Yog Darda</h5>
+								<p>Second year BTech-CE</p>
+								<p>Email</p>
+							</div>
+						</div>
+					</div>
+				</div>
 
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Shreya Hiremath</h5>
-          <p>First year BTech-CE</p>
-          <p>31232054@vupune.ac.in</p>
-        </div>
-      </div>
-    </div>
+				<!-- Add more col divs for additional cards -->
+				<div class="col">
+					<div class="container employee-container">
+						<div class="row align-items-center">
+							<div class="col-md-4 text-center">
+								<img
+									src="../../Images/user.jpeg"
+									alt="..."
+									class="rounded-circle"
+								/>
+							</div>
+							<div class="col-md-8 employee-details">
+								<h5>Shreya Hiremath</h5>
+								<p>First year BTech-CE</p>
+								<p>31232054@vupune.ac.in</p>
+							</div>
+						</div>
+					</div>
+				</div>
 
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Shrishti Shukla</h5>
-          <p>First year BTech-CE</p>
-          <p>Email</p>
-        </div>
-      </div>
-    </div>
+				<div class="col">
+					<div class="container employee-container">
+						<div class="row align-items-center">
+							<div class="col-md-4 text-center">
+								<img
+									src="../../Images/user.jpeg"
+									alt="..."
+									class="rounded-circle"
+								/>
+							</div>
+							<div class="col-md-8 employee-details">
+								<h5>Shrishti Shukla</h5>
+								<p>First year BTech-CE</p>
+								<p>email</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="container employee-container">
+						<div class="row align-items-center">
+							<div class="col-md-4 text-center">
+								<img
+									src="../../Images/user.jpeg"
+									alt="..."
+									class="rounded-circle"
+								/>
+							</div>
+							<div class="col-md-8 employee-details">
+								<h5>Ved Madurwar</h5>
+								<p>First year BTech-CE</p>
+								<p>Email</p>
+							</div>
+						</div>
+					</div>
+				</div>
 
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Ved Madurwar</h5>
-          <p>First year BTech-CE</p>
-          <p>Email</p>
-        </div>
-      </div>
-    </div>
+				<!-- Add more col divs for additional cards -->
+				<div class="col">
+					<div class="container employee-container">
+						<div class="row align-items-center">
+							<div class="col-md-4 text-center">
+								<img
+									src="../../Images/user.jpeg"
+									alt="..."
+									class="rounded-circle"
+								/>
+							</div>
+							<div class="col-md-8 employee-details">
+								<h5>Path Hande</h5>
+								<p>First year BTech-CE</p>
+								<p>31231787@vupune.ac.in</p>
+							</div>
+						</div>
+					</div>
+				</div>
 
-    <div class="container employee-container">
-      <div class="row align-items-center">
-        <div class="col-md-2 text-center">
-          <img
-            src="https://tse3.mm.bing.net/th?id=OIP.l4Y4j_D1fcdXXS_XKibUBQHaH_&pid=Api&P=0&h=180"
-            alt="..."
-            class="rounded-circle"
-          />
-        </div>
-        <div class="col-md-10 employee-details">
-          <h5>Parth Hande</h5>
-          <p>First year Btech-CSE</p>
-          <p>31231787@vupune.ac.in</p>
-        </div>
-      </div>
-    </div>
+				
+				<!-- Repeat this col div for each additional card -->
+			</div>
+		</div>
 
-    <!-- Footer -->
-    <footer class="bg-light mt-4">
-      <!-- Grid container -->
-      <div class="container p-4">
-        <!--Grid row-->
-        <div class="row">
-          <!--Grid column-->
-          <div class="col-lg-10 col-md-12 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Revolution Software Development Club</h5>
-            <p>Connecting Tech Enthusiats</p>
-          </div>
-          <!--Grid column-->
+		<!-- Footer -->
+		<footer class="bg-light mt-4">
+			<!-- Grid container -->
+			<div class="container p-4">
+				<!--Grid row-->
+				<div class="row">
+					<!--Grid column-->
+					<div class="col-lg-10 col-md-12 mb-4 mb-md-0">
+						<h5 class="text-uppercase">Revolution Software Development Club</h5>
+						<p>Connecting Tech Enthusiats</p>
+					</div>
+					<!--Grid column-->
 
-          <!--Grid column-->
-          <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
-            <ul class="list-unstyled">
-              <li>
-                <a href="#!" class="text-body" style="text-decoration: none"
-                  >FAQs</a
-                >
-              </li>
-              <li>
-                <a href="#!" class="text-body" style="text-decoration: none"
-                  >Get Help</a
-                >
-              </li>
-              <li>
-                <a href="#!" class="text-body" style="text-decoration: none"
-                  >Contact Support</a
-                >
-              </li>
-              <li>
-                <a href="#!" class="text-body" style="text-decoration: none"
-                  >Reach Out to Us</a
-                >
-              </li>
-            </ul>
-          </div>
-          <!--Grid column-->
-        </div>
-        <!--Grid row-->
-      </div>
-      <!-- Grid container -->
-    </footer>
-    <!-- Footer -->
-  </body>
+					<!--Grid column-->
+					<div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+						<ul class="list-unstyled">
+							<li>
+								<a href="#!" class="text-body" style="text-decoration: none"
+									>FAQs</a
+								>
+							</li>
+							<li>
+								<a href="#!" class="text-body" style="text-decoration: none"
+									>Get Help</a
+								>
+							</li>
+							<li>
+								<a href="#!" class="text-body" style="text-decoration: none"
+									>Contact Support</a
+								>
+							</li>
+							<li>
+								<a href="#!" class="text-body" style="text-decoration: none"
+									>Reach Out to Us</a
+								>
+							</li>
+						</ul>
+					</div>
+					<!--Grid column-->
+				</div>
+				<!--Grid row-->
+			</div>
+			<!-- Grid container -->
+		</footer>
+		<!-- Footer -->
+	</body>
 </html>
